--- a/workflow/defaults/places.yaml
+++ b/workflow/defaults/places.yaml
@@ -3,16 +3,6 @@
 #--------------------------------------------------------------------------------
 ## Fixed directories. 
 ##
-## These should be filled out automatically, the only one worth changing might be
-##  the WORK_DIR variable
-##
-## ROOT_DIR     : path to the root hybrid-godas directory containing all the 
-##                necessary scripts and executables to run the system
-## EXP_DIR      : path to the root directory for the current experiment, where
-##                all the experiment configuration and DA output files are stored
-## WORK_DIR     : A temporary directory used during the steps of a cycle. Once all
-##                the steps of a given cycle are complete, the output in WORK_DIR
-##                is removed automatically
 ##--------------------------------------------------------------------------------
 #
 default_places: &default_places
@@ -23,7 +13,7 @@ default_places: &default_places
   LOG_DIR:     !expand "{EXPDIR}/log"
   ROTDIR: !expand "{LONG_TERM_TEMP}/comrot/{doc.names.experiment}"
   ICSDIR: !expand "{LONG_TERM_TEMP}" 
-  DATAROOT:    !expand "{SHORT_TERM_TEMP}/RUNDIR/{doc.names.experiment}"
+  SOCA_EXEC:   "/scratch4/NCEPDEV/ocean/scrub/Guillaume.Vernieres/JEDI/soca/soca-bundle/build-workflow/bin/"
   SHORT_TERM_TEMP: !calc doc.platform.short_term_temp
   LONG_TERM_TEMP:  !calc doc.platform.long_term_temp
 #  SHORT_TERM_TEMP: !error GOT HERE
