--- a/workflow/platforms/_sandbox.yaml
+++ b/workflow/platforms/_sandbox.yaml
@@ -80,6 +80,7 @@ platform: !Platform
     default_exclusive: !calc doc.platform.partitions.sandbox
     default_service: !calc doc.platform.partitions.sandbox
     default_shared: !calc doc.platform.partitions.sandbox
+    default_bigmem: !calc doc.platform.partitions.sandbox
     sandbox:
       <<: *global_partition_common
 
@@ -101,6 +102,9 @@ platform: !Platform
       exclusive_accounting_ref:
         project: !calc metasched.varref(doc.accounting.cpu_project)
 
+      bigmem_accounting_ref:
+        project: !calc metasched.varref(doc.accounting.cpu_project)
+
       # Queues to use for each job type.  This logic automatically
       # switches between development queues on the backup machine and
       # development queues on the production machine based on whether the
@@ -108,15 +112,7 @@ platform: !Platform
       shared_queue: dev
       service_queue: dev
       exclusive_queue: dev
-      #shared_queue: !FirstTrue
-      #  - when: !calc ( tools.can_write("/gpfs/hps2/ptmp") )
-      #    do: dev_shared
-      #  - otherwise: devonprod_shared
-      #service_queue: dev_transfer
-      #exclusive_queue: !FirstTrue
-      #  - when: !calc ( tools.can_write("/gpfs/hps2/ptmp") )
-      #    do: dev
-      #  - otherwise: devonprod
+      bigmem_queue: bigmem
 
       # Details about the scheduler on this cluster.
       scheduler_settings:
@@ -136,42 +132,6 @@ platform: !Platform
       nodes: !calc |
         tools.node_tool_for(scheduler_settings.node_type, scheduler_settings)
 
-  # Path to mmlsquota, the program used to get GPFS disk usage information:
-  #mmlsquota: "/usr/lpp/mmfs/bin/mmlsquota"
-
-  # Automatically detect the least used scrub area the user can access:
-  #least_used_ptmp: !Immediate
-  #  - !FirstMax
-  #    - do: /gpfs/hps3/ptmp
-  #      when: !calc ( int(tools.can_write(do)) * tools.gpfs_gb(do,"hps3-ptmp","hps3",mmlsquota) )
-  #      message: Use {do} for long-term temp.
-  #    - do: /gpfs/hps/ptmp
-  #      when: !calc ( int(tools.can_write(do)) * tools.gpfs_gb(do,"hps-ptmp","hps",mmlsquota) )
-  #      message: Use {do} for long-term temp.
-  #    - do: /gpfs/hps2/ptmp
-  #      when: !calc ( int(tools.can_write(do)) * tools.gpfs_gb(do,"hps2-ptmp","hps2",mmlsquota) )
-  #      message: Use {do} for long-term temp.
-  #least_used_stmp: !Immediate
-  #  - !FirstMax
-  #    - do: /gpfs/hps/stmp
-  #      when: !calc ( int(tools.can_write(do)) * tools.gpfs_gb(do,"hps-stmp","hps",mmlsquota) )
-  #      message: Use {do} for short-term temp.
-  #    - do: /gpfs/hps2/stmp
-  #      when: !calc ( int(tools.can_write(do)) * tools.gpfs_gb(do,"hps2-stmp","hps2",mmlsquota) )
-  #      message: Use {do} for short-term temp.
-  #    - do: /gpfs/hps3/stmp
-  #      when: !calc ( int(tools.can_write(do)) * tools.gpfs_gb(do,"hps3-stmp","hps3",mmlsquota) )
-  #      message: Use {do} for short-term temp.
-
-  # long_term_temp - area for storage of data that must be passed
-  # between jobs or shared with programs external to this workflow.
   long_term_temp: !calc doc.user_places.PROJECT_DIR 
-  #!expand "{least_used_ptmp}/{tools.env('USER')}"
-
-  # short_term_temp - area for data that is only needed within one job:
   short_term_temp: !calc doc.user_places.PROJECT_DIR 
-  #!expand "{least_used_stmp}/{tools.env('USER')}"
-
-  # EXP_PARENT_DIR - Parent directory  of the expdir (experiment directory)
   EXP_PARENT_DIR: !calc doc.user_places.PROJECT_DIR
-  #!expand "{doc.user_places.PROJECT_DIR}/noscrub/{tools.env('USER')}"
