--- a/workflow/config/base.yaml
+++ b/workflow/config/base.yaml
@@ -63,7 +63,7 @@ config_base:
     export PSLOT="{doc.names.experiment}"
     export EXPDIR="{doc.places.EXPDIR}"
     export ROTDIR="{doc.places.ROTDIR}"
-    export RUNDIR="{doc.places.LONG_TERM_TEMP}/$USER/RUNDIR"
+    export RUNDIR="{doc.places.LONG_TERM_TEMP}/RUNDIR/{doc.names.experiment}"
     export ICSDIR="{doc.places.ICSDIR}"
     
     # DA cycle info
